--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     async function getDatas() {
       console.log("Fetching Google API");
     const response = await fetch ("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
-    console.log(response.values);
+    const result = await response.json;
+      console.log(result.values);
     }
     getDatas();
   </script>
