--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
 </head>
 <body>
   <script>
-    const data = [];
-    async function getDatas() {
+    let dataC = [];
+    let dataP = [];
+    async function getDatasC() {
       console.log("Fetching Google API");
     const response = await fetch ("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
-    const result = await response.json;
+    const result = await response.json();
       console.log(result.values);
+      dataC = result.values;
     }
-    getDatas();
+    getDatasC();
+     async function getDatasP() {
+      console.log("Fetching Google API");
+    const response = await fetch ("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Plateformes!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
+    const result = await response.json();
+      console.log(result.values);
+      dataC = result.values;
+    }
+    getDatasP();
   </script>
 </body>
 </html>
