--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Calculateur de temps de livraison</title>
 </head>
 <body>
+  <table id="tableau"></table>
   <script>
     let dataC = [];
     let dataP = [];
@@ -22,6 +23,14 @@
       dataC = result.values;
     }
     getDatasP();
+async function getDistance(ax, ay, bx, by) {
+  let checkpoint = ax + "," + ay + ";" + bx + "," + by + ";";
+  console.log(checkpoint);
+  const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${checkpoint}?overview=full&geometries=geojson`);
+  const result = await response.json();
+  console.log(result);
+  return [result.time, result.distance];
+}
   </script>
 </body>
 </html>
