--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     const response = await fetch ("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Plateformes!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
     const result = await response.json();
       console.log(result.values);
-      dataC = result.values;
+      dataP = result.values;
     }
     getDatasP();
 async function getDistance(ax, ay, bx, by) {
