--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
+<html>
 <head>
   <title>Calculateur de temps de livraison</title>
 </head>
@@ -21,6 +22,7 @@
     const result = await response.json();
       console.log(result.values);
       dataP = result.values;
+       await createTable();
     }
     getDatasP();
 async function getDistance(ax, ay, bx, by) {
@@ -33,14 +35,15 @@ async function getDistance(ax, ay, bx, by) {
   return [result.time, result.distance];
 }
 async function createTable() {
+  console.log("CreateTable");
     for (const chauf of dataC) {
       // Pour chaque chaudière
       for (const plat of dataP) {
-        console.log(await getDistance(chauf.lat, chauf.long, plat.lat, plat.long));
+        console.log(await getDistance(chauf[1], chauf[2], plat[1], plat[2]));
       }
     }
 }
-    createTable();
+
   </script>
 </body>
 </html>
