--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     const result = await response.json();
       console.log(result.values);
       dataC = result.values;
+        await  getDatasP();
     }
     getDatasC();
      async function getDatasP() {
@@ -24,7 +25,6 @@
       dataP = result.values;
        await createTable();
     }
-    getDatasP();
 async function getDistance(ax, ay, bx, by) {
   let checkpoint = ax + "," + ay + ";" + bx + "," + by + ";";
   console.log(checkpoint);
