--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
        await createTable();
     }
 async function getDistance(ax, ay, bx, by) {
-  let checkpoint = ax + "," + ay + ";" + bx + "," + by + ";";
+  let checkpoint = ax + "," + ay + ";" + bx + "," + by;
   console.log(checkpoint);
-  const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${checkpoint}?overview=full&geometries=geojson`);
+  const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${checkpoint}?overview=false`);
   const result = await response.json();
   console.log("Résultat OSRM");
   console.log(result);
@@ -39,7 +39,10 @@ async function createTable() {
     for (const chauf of dataC) {
       // Pour chaque chaudière
       for (const plat of dataP) {
-        console.log(await getDistance(chauf[1], chauf[2], plat[1], plat[2]));
+        // Supposons que tu as déjà obtenu la distance
+const { dist, time } = await getDistance(chauf[2], chauf[1], plat[2], plat[1]);
+console.log(dist);
+        console.log(time);
       }
     }
 }
