--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
        await createTable();
     }
 async function getDistance(ax, ay, bx, by) {
+  try {
   let checkpoint = ax + "," + ay + ";" + bx + "," + by;
   console.log(checkpoint);
   const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${checkpoint}?overview=false`);
   const result = await response.json();
   console.log("Résultat OSRM");
   console.log(result);
-  return [result.time, result.distance];
+  return [result.routes.distance, result.routes.duration];
+  } catch (err) {
+    console.log(err);
+  }
 }
 async function createTable() {
   console.log("CreateTable");
