--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@ async function createTable() {
       // Pour chaque chaudière
       for (const plat of dataP) {
         // Supposons que tu as déjà obtenu la distance
+        try {
 const { dist, time } = await getDistance(chauf[2], chauf[1], plat[2], plat[1]);
 console.log(dist);
         console.log(time);
+        } catch (err) {
+          console.log(err);
+        }
       }
     }
 }
