--- a/index.html
+++ b/index.html
@@ -1,60 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
+  <meta charset="UTF-8">
   <title>Calculateur de temps de livraison</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 20px;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+  </style>
 </head>
 <body>
-  <table id="tableau"></table>
+  <h1>Temps de Livraison</h1>
+  <table id="tableau">
+    <thead>
+      <tr>
+        <th>Chaufferie</th>
+        <th>Plateforme</th>
+        <th>Distance (km)</th>
+        <th>Durée (min)</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
   <script>
-    let dataC = [];
-    let dataP = [];
-    async function getDatasC() {
-      console.log("Fetching Google API");
-    const response = await fetch ("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
-    const result = await response.json();
-      console.log(result.values);
-      dataC = result.values;
-        await  getDatasP();
+    let chaufferies = [];
+    let plateformes = [];
+
+    async function fetchChaufferies() {
+      try {
+        const response = await fetch("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
+        const result = await response.json();
+        chaufferies = result.values;
+        await fetchPlateformes();
+      } catch (error) {
+        console.error("Erreur de récupération des chaufferies:", error);
+      }
     }
-    getDatasC();
-     async function getDatasP() {
-      console.log("Fetching Google API");
-    const response = await fetch ("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Plateformes!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
-    const result = await response.json();
-      console.log(result.values);
-      dataP = result.values;
-       await createTable();
+
+    async function fetchPlateformes() {
+      try {
+        const response = await fetch("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Plateformes!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
+        const result = await response.json();
+        plateformes = result.values;
+        await createTable();
+      } catch (error) {
+        console.error("Erreur de récupération des plateformes:", error);
+      }
     }
-async function getDistance(ax, ay, bx, by) {
-  try {
-  let checkpoint = ax + "," + ay + ";" + bx + "," + by;
-  console.log(checkpoint);
-  const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${checkpoint}?overview=false`);
-  const result = await response.json();
-  console.log("Résultat OSRM");
-  console.log(result);
-  return [result.routes[0].distance, result.routes[0].duration];
-  } catch (err) {
-    console.log(err);
-  }
-}
-async function createTable() {
-  console.log("CreateTable");
-    for (const chauf of dataC) {
-      // Pour chaque chaudière
-      for (const plat of dataP) {
-        // Supposons que tu as déjà obtenu la distance
-        try {
-const [ dist, time ] = await getDistance(chauf[2], chauf[1], plat[2], plat[1]);
-console.log(dist);
-        console.log(time);
-        } catch (err) {
-          console.log(err);
+
+    async function getDistanceDuration(lonA, latA, lonB, latB) {
+      try {
+        const coordinates = `${lonA},${latA};${lonB},${latB}`;
+        const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${coordinates}?overview=false`);
+        const result = await response.json();
+        const route = result.routes[0];
+        return [route.distance / 1000, route.duration / 60]; // km et minutes
+      } catch (error) {
+        console.error("Erreur de calcul de distance:", error);
+        return [null, null];
+      }
+    }
+
+    async function createTable() {
+      const tbody = document.querySelector("#tableau tbody");
+      for (const ch of chaufferies) {
+        for (const pl of plateformes) {
+          const [distance, duration] = await getDistanceDuration(ch[2], ch[1], pl[2], pl[1]);
+          if (distance !== null && duration !== null) {
+            const row = document.createElement("tr");
+            row.innerHTML = `
+              <td>${ch[0]}</td>
+              <td>${pl[0]}</td>
+              <td>${distance.toFixed(2)}</td>
+              <td>${duration.toFixed(1)}</td>
+            `;
+            tbody.appendChild(row);
+          }
         }
       }
     }
-}
 
+    fetchChaufferies();
   </script>
 </body>
 </html>
