--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Comparateur de temps de livraison</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
   <style>
     table {
       border-collapse: collapse;
@@ -31,6 +33,7 @@
   <table id="tableau">
     <thead id="table-head"></thead>
     <tbody id="table-body"></tbody>
+    <button id="createPDF" onclick="createPDF();">Générer le PDF</button>
   </table>
 
   <script>
@@ -108,6 +111,23 @@
     }
 
     fetchChaufferies();
+    function createPDF() {
+      function generatePDF() {
+        const now = new Date();
+        const nowFormatted = now.getDate() + now.getMonths() + now.getFullYear() + now.getHours() + now.getMinutes + now.getSeconds();
+          console.log(nowFormatted);
+          const { jsPDF } = window.jspdf;
+          const doc = new jsPDF();
+      
+          doc.autoTable({
+            html: '#tableau',
+            theme: 'grid',
+            headStyles: { fillColor: [22, 160, 133] }, // Couleur de l'en-tête
+          });
+      
+          doc.save('calculautomatiquedesdistances.pdf');
+        }
+    }
   </script>
 </body>
 </html>
