--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="w3-blue">
-  <h1>Comparateur de temps et distances de livraison</h1>
+  <h1 class="w3-center">Comparateur de temps et distances de livraison</h1>
   <table class="w3-table" id="tableau">
     <thead id="table-head"></thead>
     <tbody id="table-body"></tbody>
