--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   </style>
 </head>
 <body>
-  <div class="w3-blue">
-  <h1 class="w3-center">Comparateur de temps et distances de livraison</h1>
-  <table class="w3-table" id="tableau">
+  <div class="w3-center">
+  <p class="w3-center">Comparateur de temps et distances de livraison</p>
+  <table id="tableau">
     <thead id="table-head"></thead>
     <tbody id="table-body"></tbody>
   </table>
-  <button class="w3-button w3-center" style="display:none" id="createPDF" onclick="createPDF();">Générer le PDF</button>
 </div>
+  <button class="w3-button w3-center" style="display:none" id="createPDF" onclick="createPDF();">Générer le PDF</button>
   <script>
     let chaufferies = [];
     let plateformes = [];
