--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
       // Pour chaque chaufferie
       for (const ch of chaufferies) {
         let row = `<tr><td>${ch[0]}</td>`;
-        row.addEventListener('click', () => {
+        row.onclick = () => {
           window.open(`https://www.google.com/maps/@${ch[1]},${ch[2]},5`,'_blank');
-        });
+        }
         for (const pl of plateformes) {
           const [distance, duration] = await getDistanceDuration(ch[2], ch[1], pl[2], pl[1]);
           row += `
