--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
         row += `</tr>`;
         
         row.onclick = () => {
-          window.open(`https://www.google.com/maps/@${ch[1]},${ch[2]},5`,'_blank');
+          const url = `https://www.google.com/maps/@${ch[1]},${ch[2]},5`;
+          console.log(url);
+          window.open(url,'_blank');
         }
         
         tbody.innerHTML += row;
