--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
       // Pour chaque chaufferie
       for (const ch of chaufferies) {
-        let row = `<tr><td>${ch[0]}</td>`;
+        const urlC = `https://www.google.com/maps/@${ch[1]},${ch[2]},5`;
+        let row = `<tr><td><a href=${urlC} target='_blank'>${ch[0]}</a></td>`;
         for (const pl of plateformes) {
           const [distance, duration] = await getDistanceDuration(ch[2], ch[1], pl[2], pl[1]);
           row += `
@@ -109,13 +110,6 @@
           `;
         }
         row += `</tr>`;
-        
-        row.onclick = () => {
-          const url = `https://www.google.com/maps/@${ch[1]},${ch[2]},5`;
-          console.log(url);
-          window.open(url,'_blank');
-        }
-        
         tbody.innerHTML += row;
       }
       document.getElementById('createPDF').style.display = "block";
