--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     async function fetchChaufferies() {
       try {
-        const response = await fetch("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
+        const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs${missingPart}/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4ze${missingPartB}`);
         const result = await response.json();
         chaufferies = result.values;
         await fetchPlateformes();
@@ -55,7 +55,7 @@
 
     async function fetchPlateformes() {
       try {
-        const response = await fetch("https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs9wzB4/values/Plateformes!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4zeoNPqA");
+        const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMO${missingPart}/values/Plateformes!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4ze${missingPartB}`);
         const result = await response.json();
         plateformes = result.values;
         await createTable();
@@ -114,8 +114,13 @@
       }
       document.getElementById('createPDF').style.display = "block";
     }
-
-    fetchChaufferies();
+let missingPart;
+    let missingPartB;
+    function mainThread() {
+    missingPart = prompt("Entrez le mot de passe 1/2"); // 9wzB4
+      missingPartB = prompt("Entrez le mot de passe 2/2"); // oNPqA
+      fetchChaufferies();
+    }
     
     function createPDF() {
         const now = new Date();
@@ -139,6 +144,7 @@
       
           doc.save(`calculautomatiquedesdistances${nowFormatted}.pdf`);
     }
+    mainThread();
   </script>
 </body>
 </html>
