--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         for (const pl of plateformes) {
           const [distance, duration] = await getDistanceDuration(ch[2], ch[1], pl[2], pl[1]);
           row += `
-            <td>${distance ? distance.toFixed(2) : "?"}</td>
-            <td>${duration ? duration.toFixed(1) : "?"}</td>
+            <td id="dist">${distance ? distance.toFixed(2) : "?"}</td>
+            <td id="temp">${duration ? duration.toFixed(1) : "?"}</td>
           `;
         }
         row += `</tr>`;
