--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     async function getDistanceDuration(lonA, latA, lonB, latB) {
       try {
         const coordinates = `${lonA},${latA};${lonB},${latB}`;
+        status.textContent = `Calcul en cours de [${lonB.toFixed(4)},${latB.toFixed(4)}] à [${lonA.toFixed(4)},${latA.toFixed(4)}]`;
         const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${coordinates}?overview=false`);
         const result = await response.json();
         const route = result.routes[0];
@@ -116,6 +117,7 @@
         row += `</tr>`;
         tbody.innerHTML += row;
       }
+      status.textContent = "Obtention des distances minimales en cours...";
       await getShorter();
       document.getElementById('createPDF').style.display = "block";
     }
