--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 </div>
   <i class="w3-center" id="status"></i>
   <button class="w3-button w3-center" style="display:none" id="createPDF" onclick="createPDF();">Générer le PDF</button>
+  <button class="w3-button w3-center" style="display:none" id="createExcel" onclick="createExcel();">Générer le fichier Microsoft Excel</button>
   <script>
     let chaufferies = [];
     let plateformes = [];
@@ -121,6 +122,7 @@
       status.textContent = "Obtention des distances minimales en cours...";
       await getShorter();
       document.getElementById('createPDF').style.display = "block";
+      document.getElementById('createExcel').style.display = "block";
     }
 let missingPart;
     let missingPartB;
@@ -151,7 +153,6 @@ let missingPart;
           });
       
           doc.save(`calculautomatiquedesdistances${nowFormatted}.pdf`);
-      createExcel();
     }
     
     function createExcel() {
