--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 let missingPart;
     let missingPartB;
     function mainThread() {
-    missingPart = prompt("Entrez le mot de passe 1/2"); // 9wzB4
-      missingPartB = prompt("Entrez le mot de passe 2/2"); // oNPqA
+    missingPart = prompt("Entrez le mot de passe 1/2");
+      missingPartB = prompt("Entrez le mot de passe 2/2");
       fetchChaufferies();
     }
     
