--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
       try {
         const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs${missingPart}/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4ze${missingPartB}`);
         const result = await response.json();
+        console.log(response.status);
+        if (response.status == "OK") {
+          localStorage.setItem('missingPart', missingPart);
+          localStorage.setItem('missingPartB', missingPartB);
+        }
         chaufferies = result.values;
         await fetchPlateformes();
       } catch (error) {
@@ -131,13 +136,13 @@ let missingPart;
         missingPart = localStorage.getItem('missingPart');
       } else {
       missingPart = prompt("Entrez le mot de passe (1/2), s'il vous plaît...");
-        localStorage.setItem('missingPart', missingPart);
+        // localStorage.setItem('missingPart', missingPart);
       }
     if (localStorage.getItem('missingPartB')) {
         missingPartB = localStorage.getItem('missingPartB');
       } else {
       missingPartB = prompt("Entrez le mot de passe (2/2), s'il vous plaît...");
-        localStorage.setItem('missingPartB', missingPartB);
+       // localStorage.setItem('missingPartB', missingPartB);
       }
       fetchChaufferies();
     }
