--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/1clXfkqBSq5w9wYUW7ztSeLYMCjh9mZQGdXhMOs${missingPart}/values/Chaufferies!A:C?key=AIzaSyCZ_z9l9uecGSrVRdOD3ISnkte4ze${missingPartB}`);
         const result = await response.json();
         console.log(response.status);
-        if (response.status == "OK") {
+        if (response.status == 200) {
           localStorage.setItem('missingPart', missingPart);
           localStorage.setItem('missingPartB', missingPartB);
         }
